--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "rootDir": "./src",
     "lib": ["esnext"],
     "target": "ESNext",
-    "moduleResolution": "NodeNext",
-    "module": "NodeNext",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "strict": false,
     "sourceMap": true,
     "esModuleInterop": true,
