--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "lib": ["esnext"],
-    "target": "ESNext",
+    "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "Node",
     "strict": false,
@@ -16,6 +16,3 @@
   "include": ["src/**/*.ts"],
   "exclude": ["src/**/.test.ts"]
 }
-
-// "module": "commonjs",
-// "module": "NodeNext",
